2012-12-05  Hans Muller  <hmuller@adobe.com>

        [CSS Exclusions] ExclusionShape inlines should use isFlippedBlocksWritingMode()
        https://bugs.webkit.org/show_bug.cgi?id=103939

        Reviewed by Dirk Schulze.

        Just a minor cleanup: the protected ExclusionShape inlines, like minYForLogicalLine(),
        now use isFlippedBlocksWritingMode() instead of testing for RightToLeftWritingMode directly.
        This changeimproves consistency with the rest of WebKit and will work correctly
        if "horizontal-bt" writing-mode support is ever added.

        No new tests were added since the existing tests cover these methods.

        * rendering/ExclusionShape.h:
        (WebCore::ExclusionShape::minYForLogicalLine):
        (WebCore::ExclusionShape::maxYForLogicalLine):
        (WebCore::ExclusionShape::internalToLogicalBoundingBox):

2012-12-05  Bear Travis  <betravis@adobe.com>

        Absolutely positioned non-replaced elements should resolve vertical margins against
        their containing block's logical width
        https://bugs.webkit.org/show_bug.cgi?id=103576

        Reviewed by Emil A Eklund.

        According to the CSS box model specification, all percentage margin & padding values,
        including top & bottom, should be resolved based on the containing block's width.
        http://www.w3.org/TR/CSS2/box.html#margin-properties
        The writing modes specification has refined this definition to use the containing
        block's logical width to resolve percentage margin & padding values.
        http://dev.w3.org/csswg/css3-writing-modes/#dimension-mapping

        Previously, positioned elements measured their container in the element's block
        direction (containerLogicalHeight) to resolve margin-before/after, and in the inline
        direction (containerLogicalWidth) to resolve margin-start/end. This patch measures the
        container's logical width in its own inline direction (containerRelativeLogicalWidth)